syntax = "proto3";
package bff_websocket;

message RoomPlayer {
  int64 user_id = 1;
  int32 index = 2;
  bool ready = 3;
  bool online = 4;
  bool master = 5;
}

message SendRoomCommonChangeRequest {
  repeated int64 user_ids = 1;
  int32 game_type = 2;
  int32 room_id = 3;
  repeated RoomPlayer room_players = 4;
  bool public = 5;
}

message SendRoomCommonChangeResponse {
  repeated int64 success_user_ids = 1;
  repeated int64 failed_user_ids = 2;
}

message SendRoomChatRequest {
  int32 game_type = 1;
  int32 room_id = 2;
  int64 sender_user_id = 3;
  int32 sender_user_index = 4;
  repeated int64 receiver_user_ids = 5;
  repeated int32 receiver_user_indexes = 6;
  string content = 7;
}

message SendRoomChatResponse {
  repeated int64 success_user_ids = 1;
  repeated int64 failed_user_ids = 2;
}

message SendGameEventRequest {
  repeated int64 user_id = 1;
  int32 game_type = 2;
  int32 room_id = 3;
  repeated GameEvent event_list = 4;
}

message GameEvent {
  string event_type = 1;
  bytes payload = 2;
}

message SendGameEventResponse {
  repeated int64 success_user_ids = 1;
  repeated int64 failed_user_ids = 2;
}

service BffWebsocketService {
  rpc SendRoomCommonChange(SendRoomCommonChangeRequest)
      returns (SendRoomCommonChangeResponse);
  rpc SendRoomChat(SendRoomChatRequest) returns (SendRoomChatResponse);
  rpc SendGameEvent(SendGameEventRequest) returns (SendGameEventResponse);
}